<resources>
    <string name="app_name">ConnectMeApp</string>
    <string name="register_page_header">Register</string>
    <string name="email_input_hint">Enter Your Email</string>
    <string name="password_input_hint">Enter Password</string>
    <string name="reg_button_text">Register</string>
    <string name="Acoount_creation_check_text">Already Created Account? Login Please</string>
    <string name="login_page_header">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="account_login_check_text">No Account yet? Register Please</string>
    <string name="forgot_password_text">Forgot Password? Recover it here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Location Strings -->
    <string name="location_permission_denied">getLocation: permissions denied</string>
    <string name="location_text">"Latitude: %1$.4f; Longitude: %2$.4f; Timestamp: %3$tr"</string>
    <string name="location_not_found">Location not found</string>
    <string name="location_not_changed">Location not changed</string>

    <!-- FetchAddress Strings -->
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="address_loading">Loading Address…</string>
    <string name="address_text">"Address: %1$s \nTimestamp: %2$tr"</string>
    <string name="address_not_found">No address found</string>
    <string name="title_activity_maps">Map</string>
    <string name="group_welcome">Welcome! Let\'s get you connected to your interests</string>

</resources>
