<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20sp">

    <!---Registration Label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login_page_header"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal" />

    <!--Input for Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/email_layout">
        <EditText
            android:id="@+id/login_email_input"
            android:inputType="textEmailAddress"
            android:hint="@string/email_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Input for Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/password_layout"
        android:layout_below="@id/email_layout"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/login_password_input"
            android:inputType="textPassword"
            android:hint="@string/password_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--User Registration-->
    <Button
        android:id="@+id/btn_login"
        android:text="@string/login_btn_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:drawableLeft="@drawable/ic_login_white"
        android:drawablePadding="10sp"/>

    <!-- Click to go to register activity-->
    <TextView
        android:id="@+id/login_account_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_login_check_text"
        android:textAlignment="center"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="30sp"
        android:textColor="@color/blackTextColour"
        android:gravity="center_horizontal" />


</RelativeLayout>